--- a/.github/workflows/learn-workflow-simple.yml
+++ b/.github/workflows/learn-workflow-simple.yml
@@ -4,7 +4,7 @@ jobs :
   check-pm2-version : 
     runs-on: ubuntu-latest
     steps: 
-      - uses : actions/checkout/v2
+      - uses : actions/checkout@v2
       - uses : actions/setup-node@v1
       - run : npm install -g pm2 
       - run : pm2 -v
